// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`minimal block snapshot 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "eNqdk1Fv2jAUhf+KdZ89pr3macDYiuhEhFNp1TpFJrkQj8TO7nWQUJX/PjmhLYxsLctjzr3f8TlOHgHt1liECKxzNUjIcWOs8cZZiB5hS66pIYK1c9UocxVI2CNxp8L+A0jYGZtDBBPXiXXZkC6PCwwSOCuw0gHlD3WwceufmPkwSq5G8gY5qFZXeDLFnozdQiuBvfYNvw4oNXvltccbzcUlKQTjjEzdJ4OkQFFoLoTbCF+gCOuiR4tgiaMH+2A/Nkbs1qXLdjwy7n1h8hxtOFXmbN6VdHoyTaQPg04v409+hOwayv5lI8F4rAajnzvMbW4y7ZGFOYcLw4JQ54eLtnrgW+p+kUJFCWnLXZLEDF2YhI2jSnuIINce3/kwddyNya3xurUKmfV2+KSEmvuP9A+p0341hjCH6HuvPgcbjPGj7R8JoSPtHQUs2r3CjNB3dSwmt8vpQqXqXiWzr+n8U3i5wwNEA5IE7jYhguO9QmAHw/B3bHTJ2MrnxXE8Txez+0vik3AlL76bqLtJerNUySXzVPw/brxc/Z3bia9wPTWnWJUsV+MvszRezT7Pvw30eq5fBx9PpzOlBqrt318HC+HGt8eLHqjgTH4Lum3b30322UM=",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "config.json": "{"config":{"configVersion":"v1","schedule":[{"name":"read","crontab":"* * * * *","allowFailure":true},{"name":"reconcile","crontab":"*/5 * * * *","allowFailure":true}],"kubernetes":[{"apiVersion":"boom.com/v1","kind":"Boom","executeHookOnEvent":["Added","Modified","Deleted"]}]}}",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "boom-configmapvolume-block-json-c8b85b34",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-operator-serviceaccount-c863141e",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-operator-clusterrole-c8e55e70",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-operator-clusterrolebinding-c8dd7855",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-operator-clusterrole-c8e55e70",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-operator-serviceaccount-c863141e",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-operator",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "750ede0cf41fd98a448d2952e02de201178596943307cbecc3b8d20b85164a",
        "configmap-hash-kconfig": "2781a33e6c04e68f718789baf51ada10cbc8a0787c50d3f3ea505d6ab189f3",
      },
      "name": "kblocks-boom-operator",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "750ede0cf41fd98a448d2952e02de201178596943307cbecc3b8d20b85164a",
            "configmap-hash-kconfig": "2781a33e6c04e68f718789baf51ada10cbc8a0787c50d3f3ea505d6ab189f3",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PORTAL_SYSTEM",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PORTAL_SYSTEM",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "1",
                },
              ],
              "image": "dummy/test-operator-image:latest",
              "imagePullPolicy": "Always",
              "name": "operator",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
            {
              "image": "redis:6.2-alpine",
              "imagePullPolicy": "IfNotPresent",
              "name": "redis",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-operator-serviceaccount-c863141e",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "boom-redis",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-worker-workerserviceaccount-c8480528",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-worker-workerclusterrole-c88cb3c8",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-worker-workerclusterrolebinding-c8dc7047",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-worker-workerclusterrole-c88cb3c8",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-worker-workerserviceaccount-c8480528",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "kblocks-boom-worker",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 3000,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "750ede0cf41fd98a448d2952e02de201178596943307cbecc3b8d20b85164a",
        "configmap-hash-kconfig": "2781a33e6c04e68f718789baf51ada10cbc8a0787c50d3f3ea505d6ab189f3",
      },
      "name": "kblocks-boom-worker",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "podManagementPolicy": "OrderedReady",
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
        },
      },
      "serviceName": "kblocks-boom-worker",
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "750ede0cf41fd98a448d2952e02de201178596943307cbecc3b8d20b85164a",
            "configmap-hash-kconfig": "2781a33e6c04e68f718789baf51ada10cbc8a0787c50d3f3ea505d6ab189f3",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PORTAL_SYSTEM",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PORTAL_SYSTEM",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "RELEASE_NAME",
                  "value": "{{ .Release.Name }}",
                },
                {
                  "name": "KBLOCK_OUTPUTS_BOOM-COM-V1-BOOMS",
                  "value": "",
                },
                {
                  "name": "WORKER_INDEX",
                  "valueFrom": {
                    "fieldRef": {
                      "fieldPath": "metadata.labels['apps.kubernetes.io/pod-index']",
                    },
                  },
                },
              ],
              "image": "dummy/test-worker-image:latest",
              "imagePullPolicy": "Always",
              "name": "worker",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "startupProbe": {
                "failureThreshold": 3,
                "tcpSocket": {
                  "port": 3000,
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-worker-workerserviceaccount-c8480528",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
      "updateStrategy": {
        "rollingUpdate": {
          "partition": 0,
        },
        "type": "RollingUpdate",
      },
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-control-serviceaccount-c867682d",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-control-clusterrole-c822c923",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-control-clusterrolebinding-c839e5e6",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-control-clusterrole-c822c923",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-control-serviceaccount-c867682d",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-control",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "750ede0cf41fd98a448d2952e02de201178596943307cbecc3b8d20b85164a",
        "configmap-hash-kconfig": "2781a33e6c04e68f718789baf51ada10cbc8a0787c50d3f3ea505d6ab189f3",
      },
      "name": "kblocks-boom-control",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Control-Deployment-c8e74eae",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Control-Deployment-c8e74eae",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "750ede0cf41fd98a448d2952e02de201178596943307cbecc3b8d20b85164a",
            "configmap-hash-kconfig": "2781a33e6c04e68f718789baf51ada10cbc8a0787c50d3f3ea505d6ab189f3",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PORTAL_SYSTEM",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PORTAL_SYSTEM",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "1",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "control",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-control-serviceaccount-c867682d",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": {
      "annotations": {
        "helm.sh/hook": "pre-delete",
        "helm.sh/hook-weight": "0",
      },
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-cleanup",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "750ede0cf41fd98a448d2952e02de201178596943307cbecc3b8d20b85164a",
        "configmap-hash-kconfig": "2781a33e6c04e68f718789baf51ada10cbc8a0787c50d3f3ea505d6ab189f3",
      },
      "name": "kblocks-boom-cleanup",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Control-Cleanup-c87854d1",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "750ede0cf41fd98a448d2952e02de201178596943307cbecc3b8d20b85164a",
            "configmap-hash-kconfig": "2781a33e6c04e68f718789baf51ada10cbc8a0787c50d3f3ea505d6ab189f3",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PORTAL_SYSTEM",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PORTAL_SYSTEM",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "1",
                },
                {
                  "name": "CLEANUP",
                  "value": "true",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "cleanup",
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Never",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-control-serviceaccount-c867682d",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "{{ .Release.Namespace }}",
      },
      "name": "booms.boom.com",
    },
    "spec": {
      "group": "boom.com",
      "names": {
        "kind": "Boom",
        "plural": "booms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "description": "The conditions of the resource.

@ui kblocks.io/hidden",
                      "items": {
                        "description": "Indicates if the resource is ready",
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "description": "The hash of the last object state.

@ui kblocks.io/hidden",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
]
`;

exports[`multiple blocks 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "eNqdk1Fv2jAQx79KdM+BCR7zNMjSFlEgImm1qp2QSQ7iQezMdphQle8+nRMGlHQty5v9v/vd3d+XV0Cx5gLBAyFlAS6kuOKCGy4FeK+wVrIswIOllHk3kTm4sEOlrQq7Hriw4SIFD4bSisW2VGzbJGhwQScZ5oxQZl9QGbn8iYmhUCULVIajJlWwHE+itFFcrKFyQRtmSv0xYMu0iQwzeMd0dkmiwXSieFFPBnGGTsZ05siVYzJ0KN2p0Q6VxO6LeBFfS+5slluZbHSXyy8ZT1MU1FUiRWpNOu2MKcX2rZWO4Yd6CrUsVfKvMi5wg3nr6OcVRiLlCTOoHX4Od7h2FLJ0f+FWDfyM3UeJLIoVE9pOEvO2B3NhJVXODHiQMoMdQ1FNbqjkEq9Ly1Frtm7vVCHT9ZK+kaz2q+QKU/Cea/XvYK1j/KjqzwXyiBmpDiupC5YQO993jkcXUOwiTBQa61QU+PMg7lEL9rJD/0V92T9e9sGF8fB+5o+jRfQUxcFkMfpG6Rvcg9ciuU0meNAsB1CD1DX9Yiu21VgdmYNwtBgHT5fEg3AlL3wYRg/Dxd0sii+Zp+L/ccPZ/H2uFT/gGlWeYqN4Nh/cBotwHtyMvrf4eq5fBx/4fhBFLdbW99fBaLjBffPQLRacyZ9BV3YhfSlWfD1hhd1Jfza9Gd1OBiGtZWKlnBWdHtTBFBJMH0lEsbMLG0wf+82xT1G/pdqg0uD1q+oPe8oKtA==",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "eNqdk29v2jAQxr9KdK8DE7zMq0GatogCEUmrVeuETHIQD2JntsOEqnz36ZwwYKR/WN7Zz93v7h5fXgHFmgsED4SUBbiQ4ooLbrgU4L3CWsmyAA9SKfNuInNwYYdKWxV2PXBhw0UKHtxIKxbbUrFtk6DBBZ1kmDNCmX1BZeTyJyaGQpUsUBmOmlTBcjyJ0kZxsYbKBW2YKfXHgC3TJjLM4D3T2SWJBtOJ4kU9GcQZOhnTmSNXjsnQoXSnRjtUErsv4kV8LbmzWW5lstFdLr9kPE1RUFeJFKk16bQzphTbt1Y6hh/qKdSyVMl7ZVzgBvPW0c8rjETKE2ZQO/wc7nDtKGTp/sKtGvgZu48SWRQrJrSdJOZtD+bCSqqcGdoAZrBjKKrJDZVc4nVpOWrN1u2dKmS6XtJ/JKv9KrnCFLzvtfp3sNYxflT15wJ5xIxUh5XUBUuIne87x6MLKHYRJgqNdSoK/HkQ96gFe9mh/6K+7B8v++DCePgw88fRInqO4mCyGN1Q+gb34LVIbpMJHjTLAdQgdU2/2IptNVZH5iAcLcbB8yXxIFzJCx+H0eNwcT+L4kvmqfh/3HA2f5trxQ+4RpWn2CiezQd3wSKcB7ejby2+nuvXwQe+H0RRi7X1/XUwGm7w0Dx0iwVn8mfQlV1IX4oVX09YYXfSn01vR3eTQUhrmVgpZ0WnB3UwhQTTJxJR7OzCBtOnfnPsU9RvqTaoNHj9qvoDnyAKug==",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "config.json": "{"config":{"configVersion":"v1","schedule":[{"name":"read","crontab":"* * * * *","allowFailure":true},{"name":"reconcile","crontab":"*/5 * * * *","allowFailure":true}],"kubernetes":[{"apiVersion":"boom.com/v1","kind":"Boom","executeHookOnEvent":["Added","Modified","Deleted"]},{"apiVersion":"doom.com/v1","kind":"Doom","executeHookOnEvent":["Added","Modified","Deleted"]}]}}",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "boom-doom-configmapvolume-block-json-c839368f",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-operator-serviceaccount-c8800f81",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-operator-clusterrole-c82fd034",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-operator-clusterrolebinding-c8e87e11",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-operator-clusterrole-c82fd034",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-operator-serviceaccount-c8800f81",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-doom-operator",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "58acc6721761774971291b011e88410ea5d45b1ab97124c952f8f1b2b3b865",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "23a8f578547c07a9015685d66979f3c11ad731a32e127f05d9347439ab6be7",
        "configmap-hash-kconfig": "502fcd2c63ca259a4687038645862dccfa9199467d08a0b78da68e87ac6dcd",
      },
      "name": "kblocks-boom-doom-operator",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "58acc6721761774971291b011e88410ea5d45b1ab97124c952f8f1b2b3b865",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "23a8f578547c07a9015685d66979f3c11ad731a32e127f05d9347439ab6be7",
            "configmap-hash-kconfig": "502fcd2c63ca259a4687038645862dccfa9199467d08a0b78da68e87ac6dcd",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PORTAL_SYSTEM",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PORTAL_SYSTEM",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "2",
                },
              ],
              "image": "dummy/test-operator-image:latest",
              "imagePullPolicy": "Always",
              "name": "operator",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
            {
              "image": "redis:6.2-alpine",
              "imagePullPolicy": "IfNotPresent",
              "name": "redis",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-operator-serviceaccount-c8800f81",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "boom-doom-redis",
      "namespace": "my-namespace",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-worker-workerserviceaccount-c8d18f73",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-worker-workerclusterrole-c80e38e3",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-worker-workerclusterrolebinding-c858e5e5",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-worker-workerclusterrole-c80e38e3",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-worker-workerserviceaccount-c8d18f73",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "kblocks-boom-doom-worker",
      "namespace": "my-namespace",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 3000,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "58acc6721761774971291b011e88410ea5d45b1ab97124c952f8f1b2b3b865",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "23a8f578547c07a9015685d66979f3c11ad731a32e127f05d9347439ab6be7",
        "configmap-hash-kconfig": "502fcd2c63ca259a4687038645862dccfa9199467d08a0b78da68e87ac6dcd",
      },
      "name": "kblocks-boom-doom-worker",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "podManagementPolicy": "OrderedReady",
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
        },
      },
      "serviceName": "kblocks-boom-doom-worker",
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "58acc6721761774971291b011e88410ea5d45b1ab97124c952f8f1b2b3b865",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "23a8f578547c07a9015685d66979f3c11ad731a32e127f05d9347439ab6be7",
            "configmap-hash-kconfig": "502fcd2c63ca259a4687038645862dccfa9199467d08a0b78da68e87ac6dcd",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PORTAL_SYSTEM",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PORTAL_SYSTEM",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "RELEASE_NAME",
                  "value": "{{ .Release.Name }}",
                },
                {
                  "name": "KBLOCK_OUTPUTS_BOOM-COM-V1-BOOMS",
                  "value": "",
                },
                {
                  "name": "KBLOCK_OUTPUTS_DOOM-COM-V1-DOOMS",
                  "value": "",
                },
                {
                  "name": "WORKER_INDEX",
                  "valueFrom": {
                    "fieldRef": {
                      "fieldPath": "metadata.labels['apps.kubernetes.io/pod-index']",
                    },
                  },
                },
              ],
              "image": "dummy/test-worker-image:latest",
              "imagePullPolicy": "Always",
              "name": "worker",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "startupProbe": {
                "failureThreshold": 3,
                "tcpSocket": {
                  "port": 3000,
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-worker-workerserviceaccount-c8d18f73",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
      "updateStrategy": {
        "rollingUpdate": {
          "partition": 0,
        },
        "type": "RollingUpdate",
      },
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-control-serviceaccount-c8607aa4",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-control-clusterrole-c818af1f",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-control-clusterrolebinding-c8446c9c",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-control-clusterrole-c818af1f",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-control-serviceaccount-c8607aa4",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-doom-control",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "58acc6721761774971291b011e88410ea5d45b1ab97124c952f8f1b2b3b865",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "23a8f578547c07a9015685d66979f3c11ad731a32e127f05d9347439ab6be7",
        "configmap-hash-kconfig": "502fcd2c63ca259a4687038645862dccfa9199467d08a0b78da68e87ac6dcd",
      },
      "name": "kblocks-boom-doom-control",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Control-Deployment-c87e3b0f",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Control-Deployment-c87e3b0f",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "58acc6721761774971291b011e88410ea5d45b1ab97124c952f8f1b2b3b865",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "23a8f578547c07a9015685d66979f3c11ad731a32e127f05d9347439ab6be7",
            "configmap-hash-kconfig": "502fcd2c63ca259a4687038645862dccfa9199467d08a0b78da68e87ac6dcd",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PORTAL_SYSTEM",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PORTAL_SYSTEM",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "2",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "control",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-control-serviceaccount-c8607aa4",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": {
      "annotations": {
        "helm.sh/hook": "pre-delete",
        "helm.sh/hook-weight": "0",
      },
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-doom-cleanup",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "58acc6721761774971291b011e88410ea5d45b1ab97124c952f8f1b2b3b865",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "23a8f578547c07a9015685d66979f3c11ad731a32e127f05d9347439ab6be7",
        "configmap-hash-kconfig": "502fcd2c63ca259a4687038645862dccfa9199467d08a0b78da68e87ac6dcd",
      },
      "name": "kblocks-boom-doom-cleanup",
      "namespace": "my-namespace",
    },
    "spec": {
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Control-Cleanup-c83f6f9e",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "58acc6721761774971291b011e88410ea5d45b1ab97124c952f8f1b2b3b865",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "23a8f578547c07a9015685d66979f3c11ad731a32e127f05d9347439ab6be7",
            "configmap-hash-kconfig": "502fcd2c63ca259a4687038645862dccfa9199467d08a0b78da68e87ac6dcd",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PORTAL_SYSTEM",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PORTAL_SYSTEM",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "2",
                },
                {
                  "name": "CLEANUP",
                  "value": "true",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "cleanup",
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Never",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-control-serviceaccount-c8607aa4",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "my-namespace",
      },
      "name": "booms.boom.com",
    },
    "spec": {
      "group": "boom.com",
      "names": {
        "kind": "Boom",
        "plural": "booms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "description": "The conditions of the resource.

@ui kblocks.io/hidden",
                      "items": {
                        "description": "Indicates if the resource is ready",
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "description": "The hash of the last object state.

@ui kblocks.io/hidden",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "my-namespace",
      },
      "name": "dooms.doom.com",
    },
    "spec": {
      "group": "doom.com",
      "names": {
        "kind": "Doom",
        "plural": "dooms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "description": "The conditions of the resource.

@ui kblocks.io/hidden",
                      "items": {
                        "description": "Indicates if the resource is ready",
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "description": "The hash of the last object state.

@ui kblocks.io/hidden",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
]
`;
